questions updated, exit on finish fixed

--- a/Task 3.1C/Project_Task_3_1C/Task_3_1C/app/src/main/res/layout/activity_quiz.xml
+++ b/Task 3.1C/Project_Task_3_1C/Task_3_1C/app/src/main/res/layout/activity_quiz.xml
@@ -108,6 +108,18 @@
             android:textColor="@color/black"
             android:background="@drawable/selector_options_button"/>
 
+        <RadioButton
+            android:id="@+id/radioOption4"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:button="@null"
+            android:text="option 1"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:background="@drawable/selector_options_button"/>
+
     </RadioGroup>
 
 
